cmake_minimum_required(VERSION 3.14)

project(Softmeter LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(PROJECT_SOURCE_DIR ./dlms/src)
set(PROJECT_HEADER_DIR ./dlms/include)
include_directories(${PROJECT_HEADER_DIR} ./include ../include)

set(SOURCE
${SOURCE}
${PROJECT_SOURCE_DIR}/GXAdjacentCell.cpp
${PROJECT_SOURCE_DIR}/GXAPDU.cpp
${PROJECT_SOURCE_DIR}/GXApplicationContextName.cpp
${PROJECT_SOURCE_DIR}/GXAuthenticationMechanismName.cpp
${PROJECT_SOURCE_DIR}/GXBitString.cpp
${PROJECT_SOURCE_DIR}/GXByteBuffer.cpp
${PROJECT_SOURCE_DIR}/GXChargePerUnitScaling.cpp
${PROJECT_SOURCE_DIR}/GXChargeTable.cpp
${PROJECT_SOURCE_DIR}/GXCipher.cpp
${PROJECT_SOURCE_DIR}/GXCommodity.cpp
${PROJECT_SOURCE_DIR}/GXCreditChargeConfiguration.cpp
${PROJECT_SOURCE_DIR}/GXCurrency.cpp
${PROJECT_SOURCE_DIR}/GXDateTime.cpp
${PROJECT_SOURCE_DIR}/GXDLMS.cpp
${PROJECT_SOURCE_DIR}/GXDLMSAccessItem.cpp
${PROJECT_SOURCE_DIR}/GXDLMSAccount.cpp
${PROJECT_SOURCE_DIR}/GXDLMSActionItem.cpp
${PROJECT_SOURCE_DIR}/GXDLMSActionSchedule.cpp
${PROJECT_SOURCE_DIR}/GXDLMSActionSet.cpp
${PROJECT_SOURCE_DIR}/GXDLMSActivityCalendar.cpp
${PROJECT_SOURCE_DIR}/GXDLMSArbitrator.cpp
${PROJECT_SOURCE_DIR}/GXDLMSAssociationLogicalName.cpp
${PROJECT_SOURCE_DIR}/GXDLMSAssociationShortName.cpp
${PROJECT_SOURCE_DIR}/GXDLMSAutoAnswer.cpp
${PROJECT_SOURCE_DIR}/GXDLMSAutoConnect.cpp
${PROJECT_SOURCE_DIR}/GXDLMSCaptureObject.cpp
${PROJECT_SOURCE_DIR}/GXDLMSCertificateInfo.cpp
${PROJECT_SOURCE_DIR}/GXDLMSCharge.cpp
${PROJECT_SOURCE_DIR}/GXDLMSClient.cpp
${PROJECT_SOURCE_DIR}/GXDLMSClock.cpp
${PROJECT_SOURCE_DIR}/GXDLMSCommunicationPortProtection.cpp
${PROJECT_SOURCE_DIR}/GXDLMSCompactData.cpp
${PROJECT_SOURCE_DIR}/GXDLMSContextType.cpp
${PROJECT_SOURCE_DIR}/GXDLMSConverter.cpp
${PROJECT_SOURCE_DIR}/GXDLMSCredit.cpp
${PROJECT_SOURCE_DIR}/GXDLMSData.cpp
${PROJECT_SOURCE_DIR}/GXDLMSDayProfile.cpp
${PROJECT_SOURCE_DIR}/GXDLMSDayProfileAction.cpp
${PROJECT_SOURCE_DIR}/GXDLMSDemandRegister.cpp
${PROJECT_SOURCE_DIR}/GXDLMSDisconnectControl.cpp
${PROJECT_SOURCE_DIR}/GXDLMSEmergencyProfile.cpp
${PROJECT_SOURCE_DIR}/GXDLMSExtendedRegister.cpp
${PROJECT_SOURCE_DIR}/GXDLMSGPRSSetup.cpp
${PROJECT_SOURCE_DIR}/GXDLMSGSMCellInfo.cpp
${PROJECT_SOURCE_DIR}/GXDLMSGSMDiagnostic.cpp
${PROJECT_SOURCE_DIR}/GXDLMSHdlcSetup.cpp
${PROJECT_SOURCE_DIR}/GXDLMSIec8802LlcType1Setup.cpp
${PROJECT_SOURCE_DIR}/GXDLMSIec8802LlcType2Setup.cpp
${PROJECT_SOURCE_DIR}/GXDLMSIec8802LlcType3Setup.cpp
${PROJECT_SOURCE_DIR}/GXDLMSIECOpticalPortSetup.cpp
${PROJECT_SOURCE_DIR}/GXDLMSIecTwistedPairSetup.cpp
${PROJECT_SOURCE_DIR}/GXDLMSImageActivateInfo.cpp
${PROJECT_SOURCE_DIR}/GXDLMSImageTransfer.cpp
${PROJECT_SOURCE_DIR}/GXDLMSIp4Setup.cpp
${PROJECT_SOURCE_DIR}/GXDLMSIp4SetupIpOption.cpp
${PROJECT_SOURCE_DIR}/GXDLMSIp6Setup.cpp
${PROJECT_SOURCE_DIR}/GXDLMSLimiter.cpp
${PROJECT_SOURCE_DIR}/GXDLMSLlcSscsSetup.cpp
${PROJECT_SOURCE_DIR}/GXDLMSLNCommandHandler.cpp
${PROJECT_SOURCE_DIR}/GXDLMSLNParameters.cpp
${PROJECT_SOURCE_DIR}/GXDLMSMacAddressSetup.cpp
${PROJECT_SOURCE_DIR}/GXDLMSMBusClient.cpp
${PROJECT_SOURCE_DIR}/GXDLMSMBusMasterPortSetup.cpp
${PROJECT_SOURCE_DIR}/GXDLMSMBusSlavePortSetup.cpp
${PROJECT_SOURCE_DIR}/GXDLMSMd5.cpp
${PROJECT_SOURCE_DIR}/GXDLMSMessageHandler.cpp
${PROJECT_SOURCE_DIR}/GXDLMSModemConfiguration.cpp
${PROJECT_SOURCE_DIR}/GXDLMSModemInitialisation.cpp
${PROJECT_SOURCE_DIR}/GXDLMSMonitoredValue.cpp
${PROJECT_SOURCE_DIR}/GXDLMSNotify.cpp
${PROJECT_SOURCE_DIR}/GXDLMSNtpSetup.cpp
${PROJECT_SOURCE_DIR}/GXDLMSObject.cpp
${PROJECT_SOURCE_DIR}/GXDLMSObjectCollection.cpp
${PROJECT_SOURCE_DIR}/GXDLMSObjectDefinition.cpp
${PROJECT_SOURCE_DIR}/GXDLMSObjectFactory.cpp
${PROJECT_SOURCE_DIR}/GXDLMSParameterMonitor.cpp
${PROJECT_SOURCE_DIR}/GXDLMSPppSetup.cpp
${PROJECT_SOURCE_DIR}/GXDLMSPppSetupIPCPOption.cpp
${PROJECT_SOURCE_DIR}/GXDLMSPppSetupLcpOption.cpp
${PROJECT_SOURCE_DIR}/GXDLMSPrimeNbOfdmPlcApplicationsIdentification.cpp
${PROJECT_SOURCE_DIR}/GXDLMSPrimeNbOfdmPlcMacCounters.cpp
${PROJECT_SOURCE_DIR}/GXDLMSPrimeNbOfdmPlcMacFunctionalParameters.cpp
${PROJECT_SOURCE_DIR}/GXDLMSPrimeNbOfdmPlcMacNetworkAdministrationData.cpp
${PROJECT_SOURCE_DIR}/GXDLMSPrimeNbOfdmPlcMacSetup.cpp
${PROJECT_SOURCE_DIR}/GXDLMSPrimeNbOfdmPlcPhysicalLayerCounters.cpp
${PROJECT_SOURCE_DIR}/GXDLMSProfileGeneric.cpp
${PROJECT_SOURCE_DIR}/GXDLMSPushObject.cpp
${PROJECT_SOURCE_DIR}/GXDLMSPushSetup.cpp
${PROJECT_SOURCE_DIR}/GXDLMSQualityOfService.cpp
${PROJECT_SOURCE_DIR}/GXDLMSRegister.cpp
${PROJECT_SOURCE_DIR}/GXDLMSRegisterActivation.cpp
${PROJECT_SOURCE_DIR}/GXDLMSRegisterMonitor.cpp
${PROJECT_SOURCE_DIR}/GXDLMSSapAssignment.cpp
${PROJECT_SOURCE_DIR}/GXDLMSSchedule.cpp
${PROJECT_SOURCE_DIR}/GXDLMSScheduleEntry.cpp
${PROJECT_SOURCE_DIR}/GXDLMSScript.cpp
${PROJECT_SOURCE_DIR}/GXDLMSScriptAction.cpp
${PROJECT_SOURCE_DIR}/GXDLMSScriptTable.cpp
${PROJECT_SOURCE_DIR}/GXDLMSSeasonProfile.cpp
${PROJECT_SOURCE_DIR}/GXDLMSSecureClient.cpp
${PROJECT_SOURCE_DIR}/GXDLMSSecureServer.cpp
${PROJECT_SOURCE_DIR}/GXDLMSSecuritySetup.cpp
${PROJECT_SOURCE_DIR}/GXDLMSServer.cpp
${PROJECT_SOURCE_DIR}/GXDLMSSettings.cpp
${PROJECT_SOURCE_DIR}/GXDLMSSFSKActiveInitiator.cpp
${PROJECT_SOURCE_DIR}/GXDLMSSFSKMacCounters.cpp
${PROJECT_SOURCE_DIR}/GXDLMSSFSKMacSynchronizationTimeouts.cpp
${PROJECT_SOURCE_DIR}/GXDLMSSFSKPhyMacSetUp.cpp
${PROJECT_SOURCE_DIR}/GXDLMSSFSKReportingSystemList.cpp
${PROJECT_SOURCE_DIR}/GXDLMSSha1.cpp
${PROJECT_SOURCE_DIR}/GXDLMSSha256.cpp
${PROJECT_SOURCE_DIR}/GXDLMSSNCommandHandler.cpp
${PROJECT_SOURCE_DIR}/GXDLMSSNParameters.cpp
${PROJECT_SOURCE_DIR}/GXDLMSSpecialDay.cpp
${PROJECT_SOURCE_DIR}/GXDLMSSpecialDaysTable.cpp
${PROJECT_SOURCE_DIR}/GXDLMSTarget.cpp
${PROJECT_SOURCE_DIR}/GXDLMSTcpUdpSetup.cpp
${PROJECT_SOURCE_DIR}/GXDLMSTokenGateway.cpp
${PROJECT_SOURCE_DIR}/GXDLMSTranslator.cpp
${PROJECT_SOURCE_DIR}/GXDLMSTranslatorStructure.cpp
${PROJECT_SOURCE_DIR}/GXDLMSUtilityTables.cpp
${PROJECT_SOURCE_DIR}/GXDLMSValueEventArg.cpp
${PROJECT_SOURCE_DIR}/GXDLMSVariant.cpp
${PROJECT_SOURCE_DIR}/GXDLMSWeekProfile.cpp
${PROJECT_SOURCE_DIR}/GXHdlcSettings.cpp
${PROJECT_SOURCE_DIR}/GXHelpers.cpp
${PROJECT_SOURCE_DIR}/GXPlcSettings.cpp
${PROJECT_SOURCE_DIR}/GXReplyData.cpp
${PROJECT_SOURCE_DIR}/GXSecure.cpp
${PROJECT_SOURCE_DIR}/GXSerialNumberCounter.cpp
${PROJECT_SOURCE_DIR}/GXSNInfo.cpp
${PROJECT_SOURCE_DIR}/GXStandardObisCode.cpp
${PROJECT_SOURCE_DIR}/GXStandardObisCodeCollection.cpp
${PROJECT_SOURCE_DIR}/GXTokenGatewayConfiguration.cpp
${PROJECT_SOURCE_DIR}/GXUnitCharge.cpp
${PROJECT_SOURCE_DIR}/GXXmlReader.cpp
${PROJECT_SOURCE_DIR}/GXXmlWriter.cpp
${PROJECT_SOURCE_DIR}/GXXmlWriterSettings.cpp
)

set(HEADERS
${HEADERS}
${PROJECT_HEADER_DIR}/GXAdjacentCell.h
${PROJECT_HEADER_DIR}/GXAPDU.h
${PROJECT_HEADER_DIR}/GXApplicationContextName.h
${PROJECT_HEADER_DIR}/GXAttributeCollection.h
${PROJECT_HEADER_DIR}/GXAuthentication.h
${PROJECT_HEADER_DIR}/GXAuthenticationMechanismName.h
${PROJECT_HEADER_DIR}/GXBitString.h
${PROJECT_HEADER_DIR}/GXByteBuffer.h
${PROJECT_HEADER_DIR}/GXChargePerUnitScaling.h
${PROJECT_HEADER_DIR}/GXChargeTable.h
${PROJECT_HEADER_DIR}/GXChipperingEnums.h
${PROJECT_HEADER_DIR}/GXCipher.h
${PROJECT_HEADER_DIR}/GXCommodity.h
${PROJECT_HEADER_DIR}/GXCreditChargeConfiguration.h
${PROJECT_HEADER_DIR}/GXCurrency.h
${PROJECT_HEADER_DIR}/GXDataInfo.h
${PROJECT_HEADER_DIR}/GXDate.h
${PROJECT_HEADER_DIR}/GXDateTime.h
${PROJECT_HEADER_DIR}/GXDLMS.h
${PROJECT_HEADER_DIR}/GXDLMSAccessItem.h
${PROJECT_HEADER_DIR}/GXDLMSAccount.h
${PROJECT_HEADER_DIR}/GXDLMSActionItem.h
${PROJECT_HEADER_DIR}/GXDLMSActionSchedule.h
${PROJECT_HEADER_DIR}/GXDLMSActionSet.h
${PROJECT_HEADER_DIR}/GXDLMSActivityCalendar.h
${PROJECT_HEADER_DIR}/GXDLMSArbitrator.h
${PROJECT_HEADER_DIR}/GXDLMSAssociationLogicalName.h
${PROJECT_HEADER_DIR}/GXDLMSAssociationShortName.h
${PROJECT_HEADER_DIR}/GXDLMSAttribute.h
${PROJECT_HEADER_DIR}/GXDLMSAutoAnswer.h
${PROJECT_HEADER_DIR}/GXDLMSAutoConnect.h
${PROJECT_HEADER_DIR}/GXDLMSCaptureObject.h
${PROJECT_HEADER_DIR}/GXDLMSCertificateInfo.h
${PROJECT_HEADER_DIR}/GXDLMSCharge.h
${PROJECT_HEADER_DIR}/GXDLMSClient.h
${PROJECT_HEADER_DIR}/GXDLMSClock.h
${PROJECT_HEADER_DIR}/GXDLMSCommunicationPortProtection.h
${PROJECT_HEADER_DIR}/GXDLMSCompactData.h
${PROJECT_HEADER_DIR}/GXDLMSConnectionEventArgs.h
${PROJECT_HEADER_DIR}/GXDLMSContextType.h
${PROJECT_HEADER_DIR}/GXDLMSConverter.h
${PROJECT_HEADER_DIR}/GXDLMSCredit.h
${PROJECT_HEADER_DIR}/GXDLMSData.h
${PROJECT_HEADER_DIR}/GXDLMSDayProfile.h
${PROJECT_HEADER_DIR}/GXDLMSDayProfileAction.h
${PROJECT_HEADER_DIR}/GXDLMSDemandRegister.h
${PROJECT_HEADER_DIR}/GXDLMSDisconnectControl.h
${PROJECT_HEADER_DIR}/GXDLMSEmergencyProfile.h
${PROJECT_HEADER_DIR}/GXDLMSExtendedRegister.h
${PROJECT_HEADER_DIR}/GXDLMSGPRSSetup.h
${PROJECT_HEADER_DIR}/GXDLMSGSMCellInfo.h
${PROJECT_HEADER_DIR}/GXDLMSGSMDiagnostic.h
${PROJECT_HEADER_DIR}/GXDLMSHdlcSetup.h
${PROJECT_HEADER_DIR}/GXDLMSIec8802LlcType1Setup.h
${PROJECT_HEADER_DIR}/GXDLMSIec8802LlcType2Setup.h
${PROJECT_HEADER_DIR}/GXDLMSIec8802LlcType3Setup.h
${PROJECT_HEADER_DIR}/GXDLMSIECOpticalPortSetup.h
${PROJECT_HEADER_DIR}/GXDLMSIecTwistedPairSetup.h
${PROJECT_HEADER_DIR}/GXDLMSImageActivateInfo.h
${PROJECT_HEADER_DIR}/GXDLMSImageTransfer.h
${PROJECT_HEADER_DIR}/GXDLMSIp4Setup.h
${PROJECT_HEADER_DIR}/GXDLMSIp4SetupIpOption.h
${PROJECT_HEADER_DIR}/GXDLMSIp6Setup.h
${PROJECT_HEADER_DIR}/GXDLMSLimiter.h
${PROJECT_HEADER_DIR}/GXDLMSLimits.h
${PROJECT_HEADER_DIR}/GXDLMSLlcSscsSetup.h
${PROJECT_HEADER_DIR}/GXDLMSLNCommandHandler.h
${PROJECT_HEADER_DIR}/GXDLMSLNParameters.h
${PROJECT_HEADER_DIR}/GXDLMSLongTransaction.h
${PROJECT_HEADER_DIR}/GXDLMSMacAddressSetup.h
${PROJECT_HEADER_DIR}/GXDLMSMBusClient.h
${PROJECT_HEADER_DIR}/GXDLMSMBusMasterPortSetup.h
${PROJECT_HEADER_DIR}/GXDLMSMBusSlavePortSetup.h
${PROJECT_HEADER_DIR}/GXDLMSMd5.h
${PROJECT_HEADER_DIR}/GXDLMSMessageHandler.h
${PROJECT_HEADER_DIR}/GXDLMSModemConfiguration.h
${PROJECT_HEADER_DIR}/GXDLMSModemInitialisation.h
${PROJECT_HEADER_DIR}/GXDLMSMonitoredValue.h
${PROJECT_HEADER_DIR}/GXDLMSNotify.h
${PROJECT_HEADER_DIR}/GXDLMSNtpSetup.h
${PROJECT_HEADER_DIR}/GXDLMSObject.h
${PROJECT_HEADER_DIR}/GXDLMSObjectCollection.h
${PROJECT_HEADER_DIR}/GXDLMSObjectDefinition.h
${PROJECT_HEADER_DIR}/GXDLMSObjectFactory.h
${PROJECT_HEADER_DIR}/GXDLMSParameterMonitor.h
${PROJECT_HEADER_DIR}/GXDLMSPlcMeterInfo.h
${PROJECT_HEADER_DIR}/GXDLMSPlcRegister.h
${PROJECT_HEADER_DIR}/GXDLMSPppSetup.h
${PROJECT_HEADER_DIR}/GXDLMSPppSetupIPCPOption.h
${PROJECT_HEADER_DIR}/GXDLMSPppSetupLcpOption.h
${PROJECT_HEADER_DIR}/GXDLMSPrimeNbOfdmPlcApplicationsIdentification.h
${PROJECT_HEADER_DIR}/GXDLMSPrimeNbOfdmPlcMacCounters.h
${PROJECT_HEADER_DIR}/GXDLMSPrimeNbOfdmPlcMacFunctionalParameters.h
${PROJECT_HEADER_DIR}/GXDLMSPrimeNbOfdmPlcMacNetworkAdministrationData.h
${PROJECT_HEADER_DIR}/GXDLMSPrimeNbOfdmPlcMacSetup.h
${PROJECT_HEADER_DIR}/GXDLMSPrimeNbOfdmPlcPhysicalLayerCounters.h
${PROJECT_HEADER_DIR}/GXDLMSProfileGeneric.h
${PROJECT_HEADER_DIR}/GXDLMSPushObject.h
${PROJECT_HEADER_DIR}/GXDLMSPushSetup.h
${PROJECT_HEADER_DIR}/GXDLMSQualityOfService.h
${PROJECT_HEADER_DIR}/GXDLMSRegister.h
${PROJECT_HEADER_DIR}/GXDLMSRegisterActivation.h
${PROJECT_HEADER_DIR}/GXDLMSRegisterMonitor.h
${PROJECT_HEADER_DIR}/GXDLMSSapAssignment.h
${PROJECT_HEADER_DIR}/GXDLMSSchedule.h
${PROJECT_HEADER_DIR}/GXDLMSScheduleEntry.h
${PROJECT_HEADER_DIR}/GXDLMSScript.h
${PROJECT_HEADER_DIR}/GXDLMSScriptAction.h
${PROJECT_HEADER_DIR}/GXDLMSScriptTable.h
${PROJECT_HEADER_DIR}/GXDLMSSeasonProfile.h
${PROJECT_HEADER_DIR}/GXDLMSSecureClient.h
${PROJECT_HEADER_DIR}/GXDLMSSecureServer.h
${PROJECT_HEADER_DIR}/GXDLMSSecuritySetup.h
${PROJECT_HEADER_DIR}/GXDLMSServer.h
${PROJECT_HEADER_DIR}/GXDLMSSettings.h
${PROJECT_HEADER_DIR}/GXDLMSSFSKActiveInitiator.h
${PROJECT_HEADER_DIR}/GXDLMSSFSKMacCounters.h
${PROJECT_HEADER_DIR}/GXDLMSSFSKMacSynchronizationTimeouts.h
${PROJECT_HEADER_DIR}/GXDLMSSFSKPhyMacSetUp.h
${PROJECT_HEADER_DIR}/GXDLMSSFSKReportingSystemList.h
${PROJECT_HEADER_DIR}/GXDLMSSha1.h
${PROJECT_HEADER_DIR}/GXDLMSSha256.h
${PROJECT_HEADER_DIR}/GXDLMSSNCommandHandler.h
${PROJECT_HEADER_DIR}/GXDLMSSNParameters.h
${PROJECT_HEADER_DIR}/GXDLMSSpecialDay.h
${PROJECT_HEADER_DIR}/GXDLMSSpecialDaysTable.h
${PROJECT_HEADER_DIR}/GXDLMSTarget.h
${PROJECT_HEADER_DIR}/GXDLMSTcpUdpSetup.h
${PROJECT_HEADER_DIR}/GXDLMSTokenGateway.h
${PROJECT_HEADER_DIR}/GXDLMSTranslator.h
${PROJECT_HEADER_DIR}/GXDLMSTranslatorStructure.h
${PROJECT_HEADER_DIR}/GXDLMSUtilityTables.h
${PROJECT_HEADER_DIR}/GXDLMSValueEventArg.h
${PROJECT_HEADER_DIR}/GXDLMSValueEventCollection.h
${PROJECT_HEADER_DIR}/GXDLMSVariant.h
${PROJECT_HEADER_DIR}/GXDLMSWeekProfile.h
${PROJECT_HEADER_DIR}/GXEnums.h
${PROJECT_HEADER_DIR}/GXErrorCodes.h
${PROJECT_HEADER_DIR}/GXHdlcSettings.h
${PROJECT_HEADER_DIR}/GXHelpers.h
${PROJECT_HEADER_DIR}/GXIgnore.h
${PROJECT_HEADER_DIR}/GXMacAvailableSwitch.h
${PROJECT_HEADER_DIR}/GXMacDirectTable.h
${PROJECT_HEADER_DIR}/GXMacMulticastEntry.h
${PROJECT_HEADER_DIR}/GXMacPhyCommunication.h
${PROJECT_HEADER_DIR}/GXMBusClientData.h
${PROJECT_HEADER_DIR}/GXNeighborDiscoverySetup.h
${PROJECT_HEADER_DIR}/GXPlcSettings.h
${PROJECT_HEADER_DIR}/GXReplyData.h
${PROJECT_HEADER_DIR}/GXSecure.h
${PROJECT_HEADER_DIR}/GXSerialNumberCounter.h
${PROJECT_HEADER_DIR}/GXServerReply.h
${PROJECT_HEADER_DIR}/GXSNInfo.h
${PROJECT_HEADER_DIR}/GXStandardObisCode.h
${PROJECT_HEADER_DIR}/GXStandardObisCodeCollection.h
${PROJECT_HEADER_DIR}/GXTime.h
${PROJECT_HEADER_DIR}/GXTokenGatewayConfiguration.h
${PROJECT_HEADER_DIR}/GXUnitCharge.h
${PROJECT_HEADER_DIR}/GXXmlReader.h
${PROJECT_HEADER_DIR}/GXXmlWriter.h
${PROJECT_HEADER_DIR}/GXXmlWriterSettings.h
${PROJECT_HEADER_DIR}/IGXDLMSBase.h
${PROJECT_HEADER_DIR}/OBiscodes.h
${PROJECT_HEADER_DIR}/TranslatorGeneralTags.h
${PROJECT_HEADER_DIR}/TranslatorSimpleTags.h
${PROJECT_HEADER_DIR}/TranslatorStandardTags.h
${PROJECT_HEADER_DIR}/TranslatorTags.h
${PROJECT_HEADER_DIR}/PlatformDefinitions.h
)


add_executable(Softmeter ${SOURCE} ${HEADERS}
    ./include/SoftMeter.h
    ./include/GXDLMSBase.h
    ./include/GXDLMSServerLN.h
    ./include/Transport.h
    ./include/TransportRS232.h
    ./include/TransportBLE.h
    ./include/TransportTCP.h
    ./src/GXDLMSBase.cpp
    ./src/TransportRS232.cpp
    ./src/TransportBLE.cpp
    ./src/TransportTCP.cpp
    ./src/SoftMeter.cpp
)

